package com.overcooked.ptut.Joueurs.IA;

import com.overcooked.ptut.Joueurs.Joueur;
import com.overcooked.ptut.Joueurs.Utilitaire.Action;

public class JoueurIA implements Joueur {
    @Override
    public Action demanderAction() {
        return null;
    }
}
