@startuml

interface Joueur {
    + demanderAction(): Action
}

class JoueurHumain implements Joueur {
    + demanderAction(): Action
}

class JoueurIA implements Joueur {
    + demanderAction(): Action
}

class JoueurIACentralise extends JoueurIA {
    + demanderAction(): Action
}
class JoueurIANonCentralise extends JoueurIA {
    + demanderAction(): Action
}
class AlgorithmeRecherche{
    + solve(Probleme probleme) : Noeud
}
Probleme <-- "probleme" AlgorithmeRecherche
Etat <-- "etatInitial" AlgorithmeRecherche
Noeud <-- "frontiere / explored" AlgorithmeRecherche

class Action{
    + String nom
}

class Probleme{
    + Objectif final
    + estTerminal(Etat etat) : boolean
    + getActions(Etat etat) : List<Action>
    + faireAction(Etat etat, Action action) : Etat
    + cout(Etat etat, Action action) : int
}
Etat <-- "etatInitial" Probleme


class Etat{
    + estPermise(Action action) : boolean
    + equals(Etat etat) : boolean
    + hashCode() : int
}

class Noeud{
    + int profondeur
    + int cout
}
Etat <-- "etat" Noeud
Action <-- "action" Noeud
Noeud <-- "parent" Noeud
@enduml